Revert "Gtk+-3.20 all themes: fix redraw issue with yelp"
This reverts commit 5923eed2cfce3d15529f43b3cee47787bf4b6ee7.

Sadly, this breaks scrollbar buttons in mozilla apps and OpenOffice

--- a/desktop-themes/BlueMenta/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/BlueMenta/gtk-3.0/gtk-widgets.css
@@ -2639,21 +2639,6 @@ scrollbar {
 	-GtkScrollbar-has-forward-stepper: true;
 }
 
-/* workarround for broken yelp, w/o that yelp window have redraw issues
-   for displaying the horizontal scrollbar,
-   probably an issue with webkitgtk4 or yelp */
-scrollbar.horizontal {
-	-GtkScrollbar-has-backward-stepper: false;
-	-GtkScrollbar-has-forward-stepper: false;
-
-}
-/* override for normal applications */
-scrolledwindow > scrollbar.horizontal {
-	-GtkScrollbar-has-backward-stepper: true;
-	-GtkScrollbar-has-forward-stepper: true;
-
-}
-
 scrollbar.vertical {
     border-width: 0px 0px 0px 1px;
     min-width: 10px;
